@@ -1,0 +1,42 @@
+/*
+ * oauth2-oidc-sdk
+ *
+ * Copyright 2012-2023, Connect2id Ltd and contributors.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License"); you may not use
+ * this file except in compliance with the License. You may obtain a copy of the
+ * License at
+ *
+ *    http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software distributed
+ * under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
+ * CONDITIONS OF ANY KIND, either express or implied. See the License for the
+ * specific language governing permissions and limitations under the License.
+ */
+
+package com.nimbusds.oauth2.sdk.http;
+
+
+import java.io.IOException;
+
+
+/**
+ * HTTP request sender.
+ */
+public interface HTTPRequestSender {
+
+
+        /**
+         * Sends the specified HTTP request.
+         *
+         * @param httpRequest The HTTP request. Must not be {@code null}.
+         *
+         * @return The HTTP response.
+         *
+         * @throws IOException If the HTTP request couldn't be sent, due to a
+         *                     network or another error.
+         */
+        ReadOnlyHTTPResponse send(final ReadOnlyHTTPRequest httpRequest)
+                throws IOException;
+}
